BMSSimplificationEclipseWS/murugesh.naidu@EUFULL-TrackerUpdates/src/objects/EM_Event_vod__c.object
<CustomObject>
    <description>Activity object for Veeva Events Management
Relabeled Activities for HCPTS SEW 05/2015</description>
    <fields>
        <fullName>Account_Attendee_Fields_vod__c</fullName>
        <description>Used to store fields that display on the Account List of the Attendee Selection interface. Format is: ;FieldName1;FieldName2;...FieldNameX;
                     Fields can be from the Account object, or keywords that display special sections, such as Recent Events or MCCP.</description>
        <label>Account Attendee Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Format_HCPTS__c</fullName>
        <description>Activity Format</description>
        <label>Event Format</label>
        <picklist>
            <picklistValues>
                <fullName>Virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual/In-Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_ID_2_HCPTS__c</fullName>
        <description>Concatenated Activity ID AN-YEAR-COUNTRY-PRODUCT/TA-ABBREVIATEDACTIVITYTYPE-Activity ID AUTONUMBER</description>
        <label>Event ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Id_HCPTS__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>System ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Activity_Status_HCPTS__c</fullName>
        <description>Field used in a workflow to fire Ending Status from Activity History- used in workflows only</description>
        <label>Event Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type_Formula_HCPTS__c</fullName>
        <description>Formula Field to show and relabel Record Type to Activity Type</description>
        <formula>IF( RecordType.DeveloperName = &apos;Simple_Activity_HCPTS&apos;, 
          TEXT( Activity_Type_Simple_HCPTS__c ), 
          SUBSTITUTE(RecordType.Name, &quot;_&quot;, &quot; &quot;))</formula>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type_Simple_HCPTS__c</fullName>
        <description>Activity types for the Simplification Build. This field will denote the specific type of Activity and not the record type</description>
        <inlineHelpText>Type of Event - for eg - Speaker Meeting, Advisory Board etc</inlineHelpText>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP Preceptorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibits Booths &amp; Displays</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Attendance_vod__c</fullName>
        <description>Count of all attendees with status &quot;attended&quot; or &quot;signed&quot;.</description>
        <label>Actual Attendance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Cost_vod__c</fullName>
        <description>The actual cost of an event. This is the sum of all actual expenses that have been entered, but can be manually overridden.</description>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Meal_Cost_Per_Person_vod__c</fullName>
        <description>Sum of expenses of type Meal_vod divided by the number of attendees with status Attended_vod or Signed_vod.</description>
        <label>Actual Meal Cost Per Person</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Venue_Details_HCPTS__c</fullName>
        <label>Additional Venue Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisory_Board_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates this event includes an Advisory Board</description>
        <inlineHelpText>If checked, indicates this event includes an Advisory Board</inlineHelpText>
        <label>Advisory Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_HCPTS__c</fullName>
        <formula>TODAY() - DATEVALUE(End_Time_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alliance_Name_HCPTS__c</fullName>
        <label>Alliance Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amex_Support_Needed_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to Indicate if Amex Support is required for Activity</description>
        <inlineHelpText>Check if Amex Support is needed for this Activity</inlineHelpText>
        <label>Logistics Support Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Email_HCPTS__c</fullName>
        <description>Field used in a workflow to stamp the next approver&apos;s email</description>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_ID_HCPTS__c</fullName>
        <description>BMS ID on the User table- updated via workflow from Activity History</description>
        <label>Approver ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Reconciliation_Complete_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field becomes checked automatically when all walk-in attendees have been reconciled.</description>
        <label>Attendee Reconciliation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendees_Requesting_Meals_vod__c</fullName>
        <description>Count of attendees where a meal has been requested.</description>
        <label>Attendees Requesting Meals</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendees_With_Meals_vod__c</fullName>
        <description>Count of attendees with status &quot;attended&quot; or &quot;signed&quot; that had requested a meal.</description>
        <label>Attendees With Meals</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audio_Visual_Support_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Planning Support for Logistics planning</description>
        <inlineHelpText>Select if comprehensive support (Venue, Meals, Travel, Attendee Management, Onsite Coordination) is required from Logistics Provider.</inlineHelpText>
        <label>Planning Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_during_or_after_a_Congress__c</fullName>
        <description>Choose yes or no depending on whether this activity is Before, during or after a Congress?</description>
        <inlineHelpText>Choose yes or no depending on whether this activity is Before, during or after an International Congress?</inlineHelpText>
        <label>Before, during or after Int&apos;l Congress?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certifier_Formula_HCPTS__c</fullName>
        <description>Formula field to email certifier for approval process</description>
        <label>Certifier</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Checklist_Complete_HCPTS__c</fullName>
        <description>Placeholder for Checklist. Certain steps cannot proceed unless True.</description>
        <label>Checklist Complete</label>
        <picklist>
            <picklistValues>
                <fullName>For Processor Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Closeout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Confirmed_HCPTS__c</fullName>
        <description>Confirmed City of an event always fed by INtegration</description>
        <inlineHelpText>Confirmed Venue city to be fed from Integration</inlineHelpText>
        <label>Confirmed Venue City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City of an event. If using a venue list, this is filled in automatically.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Cost_vod__c</fullName>
        <description>The committed cost of an event. This is the sum of all the committed expenses that have been entered, but can be manually overridden.</description>
        <label>Committed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmed_Venue_Postal_Code_HCPTS__c</fullName>
        <description>Confirmed Venue Postal code to be fed from Integration</description>
        <inlineHelpText>Confirmed Venue Postal code to be fed from Integration</inlineHelpText>
        <label>Confirmed Venue Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congress_Names_HCPTS__c</fullName>
        <description>Names of Congresses - should match what is in Logistics Provider</description>
        <inlineHelpText>Names of Congresses - should match what is in Logistics Provider</inlineHelpText>
        <label>Congress Names</label>
        <picklist>
            <picklistValues>
                <fullName>AACR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AARC</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>AASLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIDS</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>APASL</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>ASCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCO-GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCO-GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVHC</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>CROI</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>EACS</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>EADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASL</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>EASL/ILC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>ECCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIKCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESH</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Attendee_Fields_vod__c</fullName>
        <description>Copy the fields that display on the Contact List on the Attendee Selection page from EM_Event_Rule_vod. Fields can be fields that exist on the Contact object, or keywords that display special sections, such as recent events.</description>
        <label>Contact Attendee Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Confirmed_HCPTS__c</fullName>
        <description>Confirmed Venue country to be fed from Integration</description>
        <inlineHelpText>Confirmed Venue country to be fed from Integration</inlineHelpText>
        <label>Confirmed Venue Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>mnaidu - 10/27/2016 - Hypercare request - Country of the Venue. If Venue is looked up from the Venue database, system will always overwrite with the Value from the Country of the Looked up Venue</description>
        <inlineHelpText>Country of the Venue. If Venue is looked up from the Venue database, system will always overwrite with the Value from the Country of the Looked up Venue, regardless of User specified choice</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipName>EM_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country where an event takes place. Used to define event-level rules.</description>
        <label>Funding Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipName>EM_Event_Country_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Formula_HCPTS__c</fullName>
        <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
        <label>Created By Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+CreatedById, CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(DAY(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(CreatedDate )))</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cybergrant_ID_HCPTS__c</fullName>
        <label>CyberGrants ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Put_In_Processor_Review__c</fullName>
        <description>This is the date that the activity was put into processor review. This field is used to report on how long an Activity has been in this status</description>
        <label>Date Put In Service Coordinator Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_In_Processor_Review__c</fullName>
        <formula>TODAY() - Date_Put_In_Processor_Review__c</formula>
        <label>Days In Service Coordinator Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>This field is used to store a description of the Event.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_SRP_HCPTS__c</fullName>
        <label>Disclaimer</label>
        <picklist>
            <picklistValues>
                <fullName>I confirm that this Standard Rep Presentation doesn&apos;t need specific approval as per the latest version of the SOP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_in_Days_HCPTS__c</fullName>
        <description>Duration of Event in Days -( End Date - Start Date)</description>
        <formula>End_Date_Formula_HCPTS__c -  Start_Date_Formula_HCPTS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration of Event in Days -( End Date - Start Date)</inlineHelpText>
        <label>Duration in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Event_In_Hours_HCPTS__c</fullName>
        <formula>(End_Time_vod__c - Start_Time_vod__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration of Event In Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Formula_HCPTS__c</fullName>
        <formula>DATEVALUE( End_Time_vod__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_HCPTS__c</fullName>
        <description>Activity Date End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_vod__c</fullName>
        <description>End time of the event.</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Attendance_vod__c</fullName>
        <description>Estimate of the number of people who will attend an event. Used for planning purposes.</description>
        <label>Estimated Attendance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_vod__c</fullName>
        <description>Estimate of the total cost of the event. Used for planning purposes before actual expenses are available.</description>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Configuration_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System field used for performance purposes. This field should not be placed on the page layout.</description>
        <label>Event Configuration</label>
        <referenceTo>EM_Event_Configuration_vod__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Display_Name_vod__c</fullName>
        <description>This value displays on the event sign in sheet. If it is not populated, the Name field value from the event is displayed on sign in sheet.</description>
        <label>Event Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exhibits_Booths_Displays__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates this event includes an Exhibits, Booths &amp; Display</description>
        <inlineHelpText>If checked, indicates this event includes an Exhibits, Booths &amp; Display</inlineHelpText>
        <label>Exhibits, Booths &amp; Displays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Food_and_Beverage_HCPTS__c</fullName>
        <description>Text Area for Starcite Interface.</description>
        <inlineHelpText>Specify food and beverages requests e.g. Breakfast, lunch, dinner, menu options, setup etc.</inlineHelpText>
        <label>Food and Beverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Location_HCPTS__c</fullName>
        <formula>Location_vod__c &amp; 
IF(ISBLANK(Location_Address_vod__c), &apos;&apos;, &apos;, &apos; &amp; Location_Address_vod__c) &amp; 
IF(ISBLANK(Postal_Code_vod__c), &apos;&apos;, &apos;, &apos; &amp; Postal_Code_vod__c) &amp; 
IF(ISBLANK(City_vod__c), &apos;&apos;, &apos;, &apos; &amp; City_vod__c) &amp; 
IF(ISBLANK(Country_HCPTS__r.Alpha_2_Code_vod__c), &apos;&apos;, &apos;, &apos; &amp; Country_HCPTS__r.Alpha_2_Code_vod__c )</formula>
        <label>Full Location Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ground_Transportation_HCPTS__c</fullName>
        <description>Text Area for Starcite Interface.</description>
        <inlineHelpText>Identify the transfers needed including when, where and how many people are to be transferred.</inlineHelpText>
        <label>Ground Transportation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HCO_Address_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HCO Address where SRP took place.</description>
        <label>HCO Address</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Address Is Not Listed on HCO Account.</errorMessage>
            <filterItems>
                <field>$Source.HCO_HCPTS__c</field>
                <operation>equals</operation>
                <valueField>Address_vod__c.Account_vod__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipName>EM_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCO_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the HCO where the SRP took place.</description>
        <label>HCO</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The HCO cannot be an Individual.</errorMessage>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>EM_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_Sponsorship_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates this event includes an HCP Sponsorship</description>
        <inlineHelpText>If checked, indicates this event includes an HCP Sponsorship</inlineHelpText>
        <label>HCP Sponsorship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCPs_With_Meals_vod__c</fullName>
        <description>Count of attendees of type Account with status &quot;attended&quot; or &quot;signed&quot; that had requested a meal.</description>
        <label>HCPs with Meals</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inherit_Expense_Esimates__c</fullName>
        <formula>HYPERLINK(&quot;https://cs11.salesforce.com/apex/VPROF_Inherit_Expense_Estimates?Id=&quot; + Id, &quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inherit Expense Estimates Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inherited_Budget_Need_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup the Budget that was inherited when a Budget got added. This automatically gets set by the inheritance trigger and may not show on the page layout.</description>
        <inlineHelpText>This is the lookup to the Budget that was inherited when it got added. This automatically gets set by the inheritance trigger and may not show on the page layout.</inlineHelpText>
        <label>Inherited Budget/Need</label>
        <referenceTo>EM_Budget_vod__c</referenceTo>
        <relationshipName>InheritingEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invited_Attendees_vod__c</fullName>
        <description>Count of all invited attendees. Populated automatically once attendees are added, but can be manually overridden.</description>
        <label>Invited Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Joint_Venture_Activity_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if Activity is part of a Joint Venture Activity</description>
        <label>Is Joint Venture Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_On_Weekend__c</fullName>
        <formula>IF(
AND(
OR(
MOD(DATEVALUE(Start_Time_vod__c) - DATE( 1900, 1, 7 ), 7) = 0,
MOD(DATEVALUE(Start_Time_vod__c) - DATE( 1900, 1, 7 ), 7) = 6
),

OR(
MOD(DATEVALUE(End_Time_vod__c) - DATE( 1900, 1, 7 ), 7) = 0,
MOD(DATEVALUE(End_Time_vod__c) - DATE( 1900, 1, 7 ), 7) = 6
),

DATEVALUE(End_Time_vod__c) - DATEVALUE(Start_Time_vod__c) &lt; 2

),

true,
false

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is On Weekend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Venture_Detail_HCPTS__c</fullName>
        <description>Alliance Details</description>
        <label>Alliance Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KOL_External_Id_vod__c</fullName>
        <description>External Id used for KOL data loads only.</description>
        <externalId>true</externalId>
        <label>KOL External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Comment_vod__c</fullName>
        <description>Stores the last comment entered when a user clicks a button on the event that changes the status and allows comment entry.</description>
        <label>Last Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+LastModifiedById, LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(DAY(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Confirmed_HCPTS__c</fullName>
        <description>Confirmed Venue Address Line 1 to be fed from Integration</description>
        <inlineHelpText>Confirmed Venue Address Line 1 to be fed from Integration</inlineHelpText>
        <label>Confirmed Venue Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Line_2_Confirmed_HCPTS__c</fullName>
        <description>Confirmed Venue Address Line 2 to be fed from Integration</description>
        <inlineHelpText>Confirmed Venue Address Line 2 to be fed from Integration</inlineHelpText>
        <label>Confirmed Venue Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Line_2_vod__c</fullName>
        <description>Address line 2 of an event. If using a venue list, this is filled in automatically.</description>
        <label>Location Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_vod__c</fullName>
        <description>Address of an event. If using a venue list, this is filled in automatically.</description>
        <label>Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_vod_HCPTS__c</fullName>
        <description>Confirmed Venue name fed from Integration</description>
        <inlineHelpText>Confirmed Venue name fed from Integration</inlineHelpText>
        <label>Confirmed Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_vod__c</fullName>
        <description>Location of event. If using a stored venue, this is filled in automatically.</description>
        <label>Requested Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Edit permission to this field determines if a user can see the Unlock button on events with status Closed_vod.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logistics_Information_HCPTS__c</fullName>
        <description>Field to support planning of event when certain items have not been locked down- i.e., Venue, Dates.</description>
        <label>Logistics Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendee_Sheet__c</fullName>
        <formula>HYPERLINK(

&quot;https://composer.congamerge.com&quot; + 
&quot;?SessionId=&quot; +  $Api.Session_ID + 
&quot;&amp;ServerURL=&quot; +  $Api.Partner_Server_URL_290 +
&quot;&amp;Id=&quot; + Id +

&quot;&amp;QueryId=[Speakers]&quot; + $Setup.Conga_and_Echosign_Ids__c.Meeting_Attendees_Speakers__c + &quot;,&quot; + 
&quot;[Audiance]&quot; + $Setup.Conga_and_Echosign_Ids__c.Meeting_Attendees_Audience__c + 

&quot;&amp;TemplateGroup=EMActivity&quot; + 
&quot;&amp;TemplateId=&quot; + $Setup.Conga_and_Echosign_Ids__c.Meeting_Attendees__c + 
&quot;&amp;OFN=BMS+Attendees+for+&quot; + Name + &quot;+-+as+of:+&quot; + TEXT(TODAY()) +
&quot;&amp;DefaultPDF=1&quot; +
&quot;&amp;DS7=3&quot; 
, &quot;Generate Meeting Attendee Sheet&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Attendee Sheet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Rooms_HCPTS__c</fullName>
        <description>Text Area for Starcite Interface.</description>
        <inlineHelpText>Identify the size and capacity of the room, seating arrangements, audio visual equipment, office supplies etc.</inlineHelpText>
        <label>Meeting Rooms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Need_Definition_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Need Definition (Budget) object</description>
        <label>Budget Definition</label>
        <referenceTo>EM_Budget_vod__c</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_ID__c</fullName>
        <description>ID of the Budget that will get stamped when an Event Budget record is selected for the Event (Uses process builder)</description>
        <inlineHelpText>ID of the Budget that will get stamped when an Event Budget record is selected for the Event</inlineHelpText>
        <label>Budget ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>